Jeg har ændret baggrundsfarven på pop-up

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body
     height: 506px;
     position: relative;
     padding: 10px 10px;
-    background: #006a8b;
+    background: #f9cf7e;
     top: 27%;
     transform: translateX(-50%) translateY(-50%);
     border-bottom: 5px solid gray;
