Har fjernet border på input

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ margin-left: -2.5em;
 {
     width: 56%;
     height: 50px;
-    background: #006b8e;
+    background: #ffff;
     position: relative;
     margin: 10px auto;
     float: right;
@@ -68,9 +68,8 @@ margin-left: -2.5em;
 input[type="text"],
 input[type="email"]
 {
-    border: 2px solid #ddd !important;
-    border-radius: 10px !important;
-    font-family: 'Roboto', sans-serif !important;
+    
+   border: none;
 }
 
 .fa
