ændret input knap farven

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ input[type="submit"]
 {
     width: 55%;
     height: 45px;
-    background: #fd5c21 !important;
+    background: #b2cba5 !important;
     font-family: 'Roboto', sans-serif;
     font-size: 14px !important;
     border-radius: 12px;
