--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap');
+font-family: 'Playfair Display SC', serif;
+
 body
 {
     margin: 0;
     padding: 0;
 }
+
+
 
 .login-form {
     width: 470px;
@@ -155,8 +160,8 @@ div#submitForm {
 
 #promotion-header-title {
     text-align: left;
-    font-family: Montserrat;
-    color: #fd5c21;
+    font-family: 'Playfair Display SC', serif;
+    color: black;
     font-size: 30px;
     font-weight: 600;
     line-height: 1.3;
