--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ div#submitForm {
 {
     text-align:left;
     font-family:Montserrat;
-    color:#FFFFFF;
+    color: black;
     font-size:14px;
     font-weight:400;
     line-height:1.3;
@@ -203,7 +203,7 @@ div#submitForm {
 {
     text-align:left;
     font-family:Montserrat;
-    color:#FFFFFF;
+    color:black;
     font-size:10px;
     font-weight:300;
     line-height:1.2;
